2007-08-02  Michael Natterer  <mitch@gimp.org>

	Make sure image thumbnails that are saved or given to plugins are
	constructed synchronously. Fixes bug #461703.

	* app/core/gimpprojection.c (gimp_projection_pickable_flush):
	invalidate the preview after constructing the projection.

	* app/core/gimpimagefile.c (gimp_imagefile_save_thumb)
	* tools/pdbgen/pdb/image.pdb (image_thumbnail): call
	gimp_pickable_flush() on the projection so is constructed now, not
	later.

	* app/pdb/image_cmds.c: regenerated.

2007-08-02  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcroptool.c (gimp_crop_tool_cursor_update): no need
	to set the tool cursor here, we already do that in init() and
	never change it.

	* app/widgets/gimpcursor.c (gimp_cursor_new): don't show the move
	cursor and the move modifier at the same time. Some small
	cleanups.

2007-08-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpegqual.c: sprinkled const qualifiers.

2007-08-02  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpegqual.c: added many options, added a list of
	known quantization tables to make comparisons and identification
	of JPEG files easier.

2007-08-01  Sven Neumann  <sven@gimp.org>

	* libgimpcolor/gimprgb-parse.c: corrected documentation.

2007-07-31  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleselecttool.c
	* app/tools/gimprectangletool.c: formatting.

2007-07-31  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptoolview.c (gimp_tool_view_eye_clicked): don't
	leak the GtkTreePath.

2007-07-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tile.c: this plug-in doesn't need a tile cache.

2007-07-30  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin.[ch]: don't call gp_quit_write() on a
	plug-in with a broken pipe. Fixes bug #460878.

2007-07-30  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.c
	* libgimpbase/gimpwire.c: cosmetic changes.

2007-07-30  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c (gimp_image_drawable_update): cosmetics.
